# QuantumPhysEval

./: .gitignore  Makefile  QuantumPhysEval.aux  QuantumPhysEval.fdb_latexmk  QuantumPhysEval.fls  QuantumPhysEval.out  README.md  build_combined_snapshot.py  main.fdb_latexmk  main.fls  pyproject.toml  requirements.txt  setup.py  update_results_tex.py
artifacts/results/: anthropic_4qubit_fit.json  anthropic_4qubit_results.json  anthropic_4qubit_summary.json  anthropic_8qubit_comparison.json  anthropic_8qubit_fit.json  anthropic_8qubit_summary.json  anthropic_complexity_scaling_summary.json  anthropic_family_fit.json  anthropic_family_results.json  anthropic_family_summary.json  anthropic_feedback_ablation_comparison.json  anthropic_feedback_ablation_no_retry_meta.json  anthropic_feedback_ablation_no_retry_results.json  (+25 more)
configs/: anthropic_8qubit.json  anthropic_family.json  feedback_ablation.json  gpt4_family.json  gpt5_family.json  gpt_8qubit.json
overleaf_neurips/: main.tex  neurips_2024.sty  neurips_2025.sty
paper/: QuantumPhysEval.tex  QuantumPhysEval_full.tex  appendix.tex  appendix_snapshot_4q_full.tex  appendix_snapshot_full.tex
quantumphyseval/: __init__.py  __main__.py  benchmark.py
scripts/: __init__.py  build_complexity_scaling_plot.py  build_feedback_ablation_plot.py  build_feedback_comparison.py  build_gpt_complexity_scaling_plot.py  build_overview_figure.py  build_pooled_all_qubits_scaling_plot.py  build_pooled_snapshot.py  build_qubit_stress_plot.py  compare_qubit_runs.py  render_clean_paper_figures.py  render_results_tex.py  rescore_results.py
(+53 files in other folders)
