[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumphyseval"
version = "0.1.0"
description = "QuantumPhysEval: a reproducible benchmark for physics-grounded quantum hallucination measurement in LLMs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "openai>=1.0.0",
  "scipy>=1.12",
  "tqdm>=4.66",
]

[project.scripts]
quantumphyseval = "quantumphyseval.benchmark:main"

[tool.setuptools]
packages = ["quantumphyseval"]

